# ut-helloworld-py

./: CMakeLists.txt  README.md  helloworldpy.desktop.in  manifest.json.in  osmobiles.odp
po/: helloworldpy.ldub.pot
python-lib/: CMakeLists.txt
qml/: Main.qml  Page2.qml  module_name.py  mymodule.py  test.qml
